# github.work

./: README.md
sandbox2/Houghcircle/: CMakeLists.txt  Hough.cc
sandbox2/Houghline/: Hough.cc
sandbox2/QT/QT1/lab1/: CMakeLists.txt  lab1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
sandbox2/QT/QT1/lab2/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  lab2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
sandbox2/QT/build-lab1-Desktop-Debug/: Makefile  lab1  moc_imageviewer.cpp  moc_mainwindow.cpp
sandbox2/QT/build-textqt-Desktop-Debug/: Makefile  moc_imageviewer.cpp  moc_mainwindow.cpp  textqt  ui_mainwindow.h
sandbox2/QT/textqt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  textqt.pro  textqt.pro.user.62dd4c3
sandbox2/QT/textvideo/: CMakeLists.txt  main.cpp
sandbox2/build-imageviewer-Desktop-Debug/: Makefile  imageviewer  moc_imageviewer.cpp
sandbox2/display_image/: CMakeLists.txt  display_image.cc
sandbox2/imageviewer/: CMakeLists.txt  imageviewer.cpp  imageviewer.pro
sandbox2/suanzi/: CMakeLists.txt  suanzi.cc
sandbox2/testqt/build-testqt-Desktop-Debug/: Makefile  moc_mainwindow.cpp  testqt  ui_mainwindow.h
sandbox2/testqt/testqt/: mainwindow.ui  testqt.pro
sandbox2/testqt2/build-imageviewer-Desktop-Debug/: Makefile  imageviewer
sandbox2/testqt2/imageviewer/: imageviewer
